--- a/app/views/notifications/success.html.haml
+++ b/app/views/notifications/success.html.haml
@@ -1,2 +1,9 @@
-%h1 We have updated your preferences
-%h3 Thank you for using Hound.cc!
+%h1 Confirmation emails are now off!
+
+%p We have updated your settings - you will no longer receive confirmation emails.
+
+%p
+  If you wish to undo this, or update any of your other preferences, please visit
+  = link_to "Settings", settings_path
+
+%p Thank you for using Hound.cc!
