--- a/app/views/user_mailer/reminder.html.haml
+++ b/app/views/user_mailer/reminder.html.haml
@@ -11,6 +11,20 @@
               = image_tag"logo.png"
         %tr
           %td
-            %h1{:style => "margin:40px 0 20px;"} Sup yo! Here's your reminder
+            %h1{:style => "margin:40px 0 20px;"}= "Reminder: #{@original_subject}"
+
             %hr{:style => "background:none;border:none;border-top:2px dotted #ddd;"}
-        =render 'reminder_body'
+
+        = render 'menu'
+
+        %tr
+          %td{:style => "width:50%"}
+            %p{:style => "font-size:16px"}== You created this reminder on #{@created_at}
+            %p{:style => "font-size:16px"}== It has been snoozed #{@snoozed} times.
+
+          %td{:style => "width:50%"}
+            = render 'snooze_box'
+
+        = render 'body', body: @body
+
+
