--- a/app/views/user_mailer/_snooze_box.html.haml
+++ b/app/views/user_mailer/_snooze_box.html.haml
@@ -5,21 +5,18 @@
         %td{:colspan => "2", :style => "text-align:left"}
           %b Snooze for:
       %tr
-        %td{:style => "text-align:right;width:5%"} Minutes:
-        = render 'snooze_link', :options => ['15','30','45'], :type => 'mi'
+        %td{:style => "text-align:right;width:5%"}
+        = render 'snooze_link', :options => ['15','30','45'], :type => 'min'
       %tr
-        %td{:style => "text-align:right"} Hours:
-        = render 'snooze_link', :options => ['1','3','6','8','12'], :type => 'h'
+        %td{:style => "text-align:right"}
+        = render 'snooze_link', :options => ['1','3','6','12'], :type => 'hr'
       %tr
-        %td{:style => "text-align:right"} Days:
-        = render 'snooze_link', :options => ['1','2','3','4','5','6'], :type => 'd'
+        %td{:style => "text-align:right"}
+        = render 'snooze_link', :options => ['1','2','4','7'], :type => 'd'
       %tr
-        %td{:style => "text-align:right"} Weeks:
-        = render 'snooze_link', :options => ['1','2','3'], :type => 'w'
-      %tr
-        %td{:style => "text-align:right"} Months:
-        = render 'snooze_link', :options => ['1','3','6','12'], :type => 'mo'
+        %td{:style => "text-align:right"}
+        = render 'snooze_link', :options => ['2','3','4'], :type => 'w'
       %tr
         %td
         %td
-          = link_to 'set snooze manually', edit_reminder_url(@reminder)
+          = link_to 'other', edit_reminder_url(@reminder)
