--- a/app/views/email_aliases/_new_alias.html.haml
+++ b/app/views/email_aliases/_new_alias.html.haml
@@ -1,5 +1,5 @@
 = form_for EmailAlias.new, remote: true do |f|
   = f.text_field :email
-  = f.submit 'Add', id: 'add_alias'
+  = f.submit 'Add', id: 'add_alias', :class => "button medium alt"
 
 .status
