--- a/app/views/settings/_change_password.html.haml
+++ b/app/views/settings/_change_password.html.haml
@@ -7,5 +7,5 @@
   = f.password_field :password
 
 %div
-  = f.submit "Change my password"
+  = f.submit "Change my password", :class => "button medium alt"
 
