--- a/app/views/static_page/index.html.haml
+++ b/app/views/static_page/index.html.haml
@@ -31,7 +31,6 @@
         %h4 Stay on top of your todo list
 
 %section#content
-
   %ul.tour
     %li.odd
       .wrapper
@@ -40,7 +39,7 @@
           %h2 Create fast email reminders (and help clear out your inbox)
           %ul
             %li
-              = image_tag('100x100.gif', :width=>"550px", :height=>"300px")
+              = image_tag('100x100.gif', :width=>"60%", :height=>"300px")
               Schedule reminders using your favourite email application. Its
               fast and simple using Hound's flexible addresses;
             %li.fourth
