--- a/app/views/static_page/faq.html.haml
+++ b/app/views/static_page/faq.html.haml
@@ -1,10 +1,15 @@
 %section#faq
   .wrapper.main
-    %h2 FAQ (Frequently Asked Questions)
+    .content.indent
+      %h2 Frequently Asked Questions
 
-    %h3 How do I set a Hound reminder?
-    %p ...
+      %h3 How do I set a Hound reminder?
+      %p ...
 
-
-    %h3 Do Hound reminders work with Gmail's Conversation View?
-    %p Yes, just like with Mail.app's "Organize By Thread" feature, all related emails/reminders from Hound will appear in the same conversation thread as the original email(s).
+      %h3 Do Hound reminders work with Gmail's Conversation View?
+      %p Yes, just like with Mail.app's "Organize By Thread" feature, all related emails/reminders from Hound will appear in the same conversation thread as the original email(s).
+    .sidebar.styled
+      = image_tag('icon-help.png')
+      %p
+        If you can't find the answer you're looking for don't hesitate to 
+        = mail_to "support@hound.cc", "ask."
