* Disabling user confirmation paths changed to confirmation/disable_confirmation_user * disable_confirmation_user no longer requires token * slightly refactored some tests

--- a/app/views/user_mailer/_confirmation.html.haml
+++ b/app/views/user_mailer/_confirmation.html.haml
@@ -7,4 +7,4 @@
 
 %p
   Don't need a confirmation every time you schedule a reminder?
-  = link_to "Turn off confirmation emails", @edit_notification_url
+  = link_to "Turn off confirmation emails", @disable_confirmations_url
