sass rendering fix, sass partials breakdown, starting app styles

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,5 +6,11 @@
 - *= require chosen
 - *= require_self
 - *= require ./screen
-- *= require_tree .
+- *= require ./buttons
+- *= require ./devise
+- *= require ./flashes
+- *= require ./notifications
+- *= require ./reminders
+- *= require_tree ./application
 - */
+
