--- a/app/views/reminders/index.html.haml
+++ b/app/views/reminders/index.html.haml
@@ -9,11 +9,12 @@
       .reminder_container
         .inline_reminder
       .reminder_list
-        %table.modern
-          %tr
-            %th.large= "You have #{pluralize(@reminder_filter.filtered_reminders.count, "#{@reminder_filter.filter} reminder")}"
-            %th.large Reminder Date
-            %th.small Mark as complete?
+        .table-wrap.box
+          %table.modern
+            %tr
+              %th.large= "You have #{pluralize(@reminder_filter.filtered_reminders.count, "#{@reminder_filter.filter} reminder")}"
+              %th.large Reminder Date
+              %th.small Mark as complete?
 
         - if @reminder_filter.filter == 'completed'
           = render 'reminders', :reminders => @reminder_filter.filtered_reminders
