--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -1,457 +1,16 @@
+
+// Import Compass defaults
+
 @import compass/reset
 @import compass/utilities
 @import compass/css3
 
-$one:   #e88300
-$two:   #febd69
-$three: #331a03
+// Import Custom partials
 
-html, body
-  height: 100%
-
-body
-  background: url(image_path("bg.png"))
-  font-family: sans-serif
-  
-a
-  color: $three
-  font-size: 12px
-  text-decoration: none
-  &:hover, &:focus
-    text-decoration: underline
-
-h1, h2, h3, h4
-  color: $three
-  font-family: 'Lobster', sans-serif
-  font-weight: normal
-h2
-  font-size: 36px
-  +text-shadow(rgba(0, 0, 0, 0.5) 0 1px 2px)
-h3
-  font-size: 24px
-h4
-  font-size: 18px
-
-.wrapper
-  margin: 0 auto
-  max-width: 1000px
-  position: relative
-  width: 80%
-  +pie-clearfix
-  
-.fourth
-  display: inline
-  float: left
-  width: 25%
-  
-.horizontal
-  +pie-clearfix
-  li
-    display: inline
-    float: left
-    padding-right: 15px
-    
-.main
-  font-size: 14px
-  line-height: 1.4
-  padding: 40px 0
-  h2
-    margin-bottom: 20px
-  h3
-    color: $one
-    margin-bottom: 10px
-  p
-    color: 444
-    font-size: 13px
-    margin-bottom: 20px
-  a
-    color: $three
-    font: 16px Amaranth
-  ul
-    margin-bottom: 20px
-    
-#container
-  height: auto !important
-  margin: 0 auto -142px
-  min-height: 100%
-  
-.push, #footer
-  height: 142px
-
-#header
-  background: url(image_path("bg-brown.png"))
-  text-align: center
-  +pie-clearfix
-  .flash
-    left: 45%
-    position: absolute
-    top: 0
-    width: 10%
-#featured
-  background: url(image_path("bg-brown.png"))
-  .wrapper
-    overflow: hidden
-    text-align: left
-  h2
-    clear: both
-    color: $two
-    font-size: 60px
-    font-style: italic
-    padding: 60px 0 25px
-    position: relative
-    z-index: 10
-    +text-shadow(rgba(0, 0, 0, 0.5) 0 5px 1px)
-  h3
-    color: $one
-    font-family: Amaranth
-    font-size: 20px
-    font-style: italic
-    line-height: 1.4
-    padding: 0 15px
-    width: 55%
-    +text-shadow(rgba(0, 0, 0, 0.5) 0 3px 1px)
-  .hound
-    bottom: 0px
-    position: absolute
-    right: 30px
-    z-index: 5
-
-#logo
-  float: left
-  padding: 40px 0 0
-  a
-    background: url(image_path("logo.png")) no-repeat center
-    display: block
-    height: 53px
-    opacity: 0.8
-    overflow: hidden
-    text-indent: -9999px
-    width: 178px
-    +transition(all 0.5s ease)
-    &:hover, &:focus
-      opacity: 1
-
-#main-nav
-  float: right
-  +pie-clearfix
-  li
-    display: inline
-    float: left
-  a
-    border-bottom: 1px solid transparent
-    color: $one
-    display: block
-    font-size: 18px
-    font-family: 'Lobster'
-    padding: 70px 20px 30px
-    text-decoration: none
-    +text-shadow(#000 0 1px 0)
-    &:hover, &:focus, &.active
-      background: rgba(0, 0, 0, 0.2)
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1)
-      color: #fff
-
-.button
-  background: $two
-  border: none
-  color: $three
-  cursor: pointer
-  display: block
-  font-family: Lobster
-  font-size: 22px
-  padding: 11px 0
-  text-decoration: none
-  +border-radius(2px)
-  +box-shadow(rgba(0, 0, 0, 0.4) 0 5px 0)
-  +text-shadow(rgba(255, 255, 255, 0.6) 0 1px 0)
-  +transition(background 0.5s ease)
-  &.signup
-    background: url(image_path('paw.png')) no-repeat 90% 50% $two
-    text-align: center
-    +transition(background 0.3s ease)
-    &:hover, &:focus
-      background: url(image_path('paw.png')) no-repeat 92% 25% $two
-  &.medium
-    font-size: 18px
-    padding: 5px 40px
-  &:hover, &:focus
-    background: $two + #111
-    color: #000
-    text-decoration: none
-    +box-shadow(rgba(0, 0, 0, 0.7) 0 5px 0)
-    
-  &.alt
-    background: $one
-    color: #fff
-    +box-shadow(rgba(0, 0, 0, 0.1) 0 5px 0)
-    +text-shadow(rgba(0, 0, 0, 0.2) 0 1px 0)
-    +transition(background 0.5s ease)
-    &:hover, &:focus
-      background: $three + #222
-      text-decoration: none
-  &:active
-    position: relative
-    top: 3px
-    +box-shadow(rgba(0, 0, 0, 0.1) 0 2px 0)
-  
-
-.signup-wrap
-  margin: 50px 15px 60px
-  text-align: center
-  width: 40%
-  &.wide
-    margin: 0
-    padding: 40px 30%
-  
-  span
-    color: $one
-    display: block
-    font-size: 11px
-    line-height: 1.4
-    opacity: 0.3
-    padding: 15px 0 0
-    +text-shadow(rgba(0, 0, 0, 0.3) 0 1px 0)
-    +transition(all 1s ease)
-  &:hover, &:focus
-    span
-      opacity: 1
-  
-#guide
-  background: url(image_path('bg-dark.png'))
-  padding: 40px 0
-  position: relative
-  z-index: 15
-  +box-shadow(rgba(0, 0, 0, 0.1) 0 0 7px inset)
-  h4
-    color: $two
-    font-family: Amaranth
-
-.short-guide
-  +pie-clearfix
-  li
-    display: inline-block
-    float: left
-    padding: 0 1%
-    text-align: center
-    width: 23%
-  img
-    display: inline-block
-    margin-bottom: 10px
-    width: 40%
-  h4
-    color: $three
-    font-size: 16px
-    margin-bottom: 7px
-  p
-    color: $three + #222
-    font: normal 14px Amaranth
-
-.tour
-  +pie-clearfix
-  li
-    padding: 20px 0 15px
-    +pie-clearfix
-  > li
-    padding: 50px 0 25px
-    &.odd
-      background: url(image_path('bg-white.png'))
-    &:first-child
-      padding-top: 60px
-  
-  span.number
-    background: $one
-    color: #fff
-    display: block
-    font: 20px Lobster
-    float: left
-    margin-right: 2%
-    padding: 12px 0
-    text-align: center
-    width: 5%
-    +border-radius(100px)
-    +text-shadow(rgba(0, 0, 0, 0.3) 0 1px 1px)
-  .tour-content
-    float: left
-    width: 93%
-  h2
-    color: $three
-    font-size: 36px
-    margin: 5px 0 20px
-    +text-shadow(rgba(0, 0, 0, 0.4) 0 1px 2px)
-  p
-    font: normal 14px/1.4 Amaranth
-    float: left
-    padding-left: 0.5%
-    width: 45%
-  img
-    float: right
-    width: 45%
-    
-#signup
-  background: url(image_path('bg-brown.png')) repeat center
-  +box-shadow(rgba(0, 0, 0, 0.1) 0 -3px 9px inset)
-#benefits
-  background: url(image_path('bg-brown.png')) repeat center
-  padding: 50px 0 40px
-  text-align: center
-  h2
-    background: url(image_path('separator.png')) no-repeat center bottom
-    //border-bottom: 3px dotted rgba(0, 0, 0, 0.2)
-    //margin: 0 0 10px
-    padding-bottom: 20px
-    +text-shadow(rgba(0, 0, 0, 0.4) 0 1px 2px)
-  h2, p
-    color: $two
-    
-.benefits
-  line-height: 1.3
-  padding: 20px 0
-  +pie-clearfix
-  li
-    display: inline
-    float: left
-    padding: 0 1.3%
-    width: 14%
-    
-  h3
-    color: $one
-    font-size: 18px
-    padding-bottom: 10px
-    +text-shadow(rgba(0, 0, 0, 0.2) 0 1px 1px)
-  p
-    color: $three
-    font: 14px Amaranth
-  a
-    color: $two
-    font-size: 14px
-
-#footer
-  background: url(image_path('bg-dark.png'))
-  color: rgba(255, 255, 255, 0.6)
-  font: 13px Amaranth
-  +box-shadow(rgba(0, 0, 0, 0.05) 0 0 9px inset)
-  +text-shadow(rgba(0, 0, 0, 0.5) 0 1px 1px)
-  a
-    color: $one
-    font-size: 14px
-  ul
-    padding: 50px 0 7px 0
-  .twitter-follow-button
-    position: absolute
-    right: 0
-    top: 65px
-    
-    
-// Unsorted SASS
-.flash
-  font-size: 12px
-  padding: 10px 5px
-  text-align: center
-#devise
-  background: #fff
-  margin: 50px auto 10px
-  padding: 40px 40px 20px
-  width: 266px
-  +border-radius(3px)
-  +box-shadow(rgba(0, 0, 0, 0.1) 0 0 5px)
-  
-#devise, #settings
-  form
-    padding-bottom: 20px
-  
-  h2
-    margin-bottom: 20px
-  label
-    color: rgba(0, 0, 0, 0.5)
-    font: 14px Amaranth
-  input[type=email], input[type=password], input[type=text]
-    border: 1px solid rgba(0, 0, 0, 0.4)
-    font-size: 16px
-    margin-bottom: 10px
-    padding: 5px 10px
-    width: 246px
-    +box-shadow(rgba(0, 0, 0, 0.1) 1px 1px 3px inset)
-    &:hover, &:focus, &:active
-      border-color: $one
-  input[type=submit]
-    margin-top: 20px
-  .box
-    background: #fff
-    margin: 0 0 15px
-    padding: 20px 40px 10px
-    +border-radius(3px)
-    +box-shadow(rgba(0, 0, 0, 0.1) 0 0 5px)
-    ul
-      margin: 0
-#links
-  padding-bottom: 30px
-  text-align: center
-  
-.app
-  padding: 50px 0
-  h2
-    margin-bottom: 20px
-.sidenav
-  display: inline
-  float: left
-  font-size: 14px
-  width: 20%
-  li
-    padding: 5px
-  a
-    font-size: 14px
-.content
-  display: inline
-  float: left
-  padding-right: 5%
-  width: 75%
-  &.indent
-    width: 69%
-    padding-left: 6%
-  ul
-    list-style: square
-    padding-left: 20px
-    li
-      color: #666
-      font-size: 12px
-      padding-bottom: 10px
-    a
-      font-size: 14px
-  h4
-    padding-bottom: 10px
-
-.sidebar
-  display: inline
-  float: right
-  margin-top: 20px
-  width: 20%
-  +pie-clearfix
-  &.styled
-    background: url(image_path('bg-light.png'))
-    color: #fff
-    padding: 30px 2% 10px
-    width: 16%
-    +border-radius(3px)
-    +box-shadow(rgba(0, 0, 0, 0.05) 0 0 5px inset)
-    p
-      color: #444
-      font-family: Amaranth
-      +text-shadow(rgba(255, 255, 255, 0.4) 0 1px 1px)
-  &.pushed
-    margin-top: 70px
-    padding-bottom: 30px
-  h4
-    padding-bottom: 10px
-  a
-    color: $one
-    font-size: 14px
-    +text-shadow(rgba(255, 255, 255, 0.4) 0 1px 1px)
-  img
-    width: 100%
-.modern
-  font-size: 12px
-  width: 100%
-  
-#settings
-  label
-    display: block
+@import partials/base
+@import partials/layout
+@import partials/header
+@import partials/content
+@import partials/app
+@import partials/data
+@import partials/footer
