--- a/app/views/reminders/_upcoming_reminders.html.haml
+++ b/app/views/reminders/_upcoming_reminders.html.haml
@@ -1,5 +1,5 @@
 - @reminder_filter.grouped_by_periods.each_pair do |period_name, reminders|
   - if reminders.present?
-    = period_name.to_s.titleize
+    %h3= period_name.to_s.titleize
 
     = render 'reminders', :reminders => reminders
