app styles, nav sass refactor

--- a/app/views/reminders/_reminders.html.haml
+++ b/app/views/reminders/_reminders.html.haml
@@ -1,4 +1,4 @@
-.table-wrap
+.table-wrap.list
   %table{class: 'modern'}
     - reminders.each do |reminder|
       = render 'reminder', reminder: reminder
