--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -34,14 +34,53 @@
     +box-shadow(rgba(0, 0, 0, 0.1) 0 0 5px)
     ul
       margin: 0
+      
 #links
   padding-bottom: 30px
   text-align: center
-  
 
-    
 .table-wrap
-  padding: 20px
+  margin: 0 0 20px
+  +border-radius(3px)
+  
+  &.heading
+    background: url(image_path('bg-light.png'))
+    padding: 9px 15px
+    +box-shadow(rgba(0, 0, 0, 0.1) 0 0 5px inset)
+    th
+      color: rgba(0, 0, 0, 0.4)
+      font: 14px Amaranth
+      +text-shadow(rgba(255, 255, 255, 0.5) 0 1px 1px)
+      &:first-child
+        color: $three
+      img
+        margin-bottom: -4px
+        margin-right: 3px
+  &.list
+    margin-top: 10px
+    +box-shadow(rgba(0, 0, 0, 0.1) 0 0 5px)
+    td
+      background: #fff
+      border-bottom: 1px solid #eee
+      color: #666
+      padding: 8px 15px
+      &:first-child
+        color: $three
+        font-weight: bold
+    tr
+      &:last-child td
+        border: none
+      &:hover, &:focus
+        td
+          background: $two + #888
+    input[type=checkbox]
+      float: right
+      
+.reminder_list
+  h3
+    color: $one
+    +text-shadow(rgba(255, 255, 255, 0.5) 0 1px 1px)
+        
     
 .modern
   font-size: 12px
