--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -10,6 +10,7 @@
 @import partials/base
 @import partials/layout
 @import partials/header
+@import partials/nav
 @import partials/content
 @import partials/app
 @import partials/data
