--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
           %nav#main-nav
             - unless user_signed_in?
               %li= link_to 'How To', '/how-to', :class => cp("how-to")
-              %li= link_to 'FAQ', '/faq', :class => cp("faq")
+              //%li= link_to 'FAQ', '/faq', :class => cp("faq")
               %li= link_to 'About', '/about', :class => cp("about")
               %li= link_to 'Sign up', new_user_registration_path
               %li= link_to 'Login', new_user_session_path
