--- a/app/views/email_aliases/_new_alias.html.haml
+++ b/app/views/email_aliases/_new_alias.html.haml
@@ -1,4 +1,5 @@
 = form_for EmailAlias.new, remote: true do |f|
+  = f.label 'New Email Address'
   = f.text_field :email
   = f.submit 'Add', id: 'add_alias', :class => "button medium alt"
 
