--- a/app/views/settings/edit.html.haml
+++ b/app/views/settings/edit.html.haml
@@ -1,6 +1,6 @@
 %section#settings
   .wrapper.main
-    
+
     .content
 
       %h2 Settings
@@ -35,6 +35,11 @@
         = form_for(resource, as: resource_name, url: update_password_settings_url, html: { method: :put, autocomplete: :off  }) do |f|
           = render 'change_password', f: f
 
+      .box
+        %h3 Merge with another account
+        = form_tag merge_users_url, method: :puts do
+          = render 'merge_users'
+
     .sidebar.styled.pushed
       %h3 Close Account
       %p We're sorry to see you go!
@@ -44,4 +49,3 @@
         %b all of your account information, reminders and emails will be permanently deleted.
 
       = link_to "Permanently Close This Account", registration_path(resource_name), :confirm => "Are you sure you want to close your account?", :method => :delete
-
