--- a/app/views/user_mailer/send_error_notification.html.haml
+++ b/app/views/user_mailer/send_error_notification.html.haml
@@ -2,15 +2,16 @@
 %html
   %head
     %meta{ 'content' => "text/html; charset=UTF-8", 'http-equiv' => "Content-Type" }
-  %body{:style => "font-size:12px;font-family:Helvetica,Arial,sans-serif"}
-    %table
+  %body{:style => "font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:20px 0 0;"}
+    %table{:style => "margin: 0 auto;width:600px;"}
       %tbody
         %tr
-          %td
-            = image_tag"logo.png"
+          %td{:style=>"background: url(http://www.hound.cc/assets/bg-brown.png) #331A03; padding: 20px;"}
+            = link_to "http://hound.cc/", :target => "_blank", :style => "outline:none;" => do
+              = image_tag"logo.png"
         %tr
           %td
-            %h1 Sorry, we couldn't recognize all of the "...@hound.cc" date formats.
+            %h1{:style => "margin:40px 0 0;"} Sorry, we couldn't recognize all of the "...@hound.cc" date formats.
         %tr
           %td
 
@@ -25,8 +26,11 @@
             = render "/shared/supported_date_formats"
         %tr
           %td
+            %hr{:style => "background:none;border:none;border-top:2px dotted #ddd;"}
+        %tr
+          %td
             %p
               We hope the above list helps. If you have a question that remains unanswered,
               please
-              = link_to "contact us", 'https://hound.uservoice.com'
+              = link_to "contact us", 'https://hound.uservoice.com', :style => "color: #E88300"
 
