--- a/app/views/user_mailer/_confirmation.html.haml
+++ b/app/views/user_mailer/_confirmation.html.haml
@@ -1,17 +1,21 @@
 %tr
   %td
-    %h1 We've set your reminder!
-
+    %h1{:style => "margin:40px 0 0;"} We've set your reminder!
+    
 %tr
   %td
     %ul
-      %li= link_to "Upcoming", reminders_url
-      %li= link_to "Settings", settings_url
+      %li= link_to "Upcoming", reminders_url, :style => "color: #E88300"
+      %li= link_to "Settings", settings_url, :style => "color: #E88300"
 
 = render 'send_at'
 
 %tr
   %td
+    %hr{:style => "background:none;border:none;border-top:2px dotted #ddd;"}
+    
+%tr
+  %td
     %p
       Don't need a confirmation every time you schedule a reminder?
-      = link_to "Turn off confirmation emails", @disable_confirmations_url
+      = link_to "Turn off confirmation emails", @disable_confirmations_url, :style => "color: #E88300"
