--- a/app/views/user_mailer/_invite.html.haml
+++ b/app/views/user_mailer/_invite.html.haml
@@ -1,16 +1,21 @@
 %tr
   %td
-    %h1 Welcome to Hound.cc!
+    %h1{:style => "margin:40px 0 0;"} Welcome to Hound.cc!
 
 = render 'send_at'
 
 %tr
   %td
-    %p
-      Since this is the first time we've seen you on Hound, please verify your
-      email address by opening the link below:
+    %hr{:style => "background:none;border:none;border-top:2px dotted #ddd;"}
 
 %tr
   %td
-    %p=link_to "Yes it's me! Activate my account!", @activate_url
+    %p{:style => "line-height:1.4;"}
+      Since this is the first time we've seen you on Hound,
+      %br
+      please verify your email address by opening the link below:
+
+%tr
+  %td
+    %p=link_to "Yes it's me! Activate my account!", @activate_url, :style => "display: block;text-align:center;padding:10px;background:#E88300;color:#fff;font-weight:bold;font-size:14px;text-decoration:none;"
 
