--- a/app/views/user_mailer/_send_at.html.haml
+++ b/app/views/user_mailer/_send_at.html.haml
@@ -2,6 +2,6 @@
   %td
     %p
       We'll send you a reminder for
-      %b= link_to @original_subject, @edit_reminder_url
+      %b= link_to @original_subject, @edit_reminder_url, :style => "color: #E88300"
       on
-      %b= link_to @send_at, @edit_reminder_url
+      %b= link_to @send_at, @edit_reminder_url, :style => "color: #E88300"
