--- a/app/views/user_mailer/send_confirmation.html.haml
+++ b/app/views/user_mailer/send_confirmation.html.haml
@@ -2,13 +2,14 @@
 %html
   %head
     %meta{ 'content' => "text/html; charset=UTF-8", 'http-equiv' => "Content-Type" }
-  %body{:style => "font-size:12px;font-family:Helvetica,Arial,sans-serif"}
+  %body{:style => "background:url(http://hound.cc/assets/bg.png);font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:20px 0 0;"}
     -# this is a smell - TODO refactor into separate views
-    %table
+    %table{:style => 'margin: 0 auto;width:600px;'}
       %tbody
         %tr
-          %td
-            = image_tag"logo.png"
+          %td{:style=>"background: url(http://www.hound.cc/assets/bg-brown.png) #331A03; padding: 20px;"}
+            = link_to "http://hound.cc/", :target => "_blank", :style => "outline:none;" => do
+              = image_tag"logo.png"
         - unless @user_active
           = render 'invite'
         - else
