--- a/app/views/user_mailer/send_notification_snooze.html.haml
+++ b/app/views/user_mailer/send_notification_snooze.html.haml
@@ -2,11 +2,15 @@
 %html
   %head
     %meta{ 'content' => "text/html; charset=UTF-8", 'http-equiv' => "Content-Type" }
-  %body{:style => "font-size:12px;font-family:Helvetica,Arial,sans-serif"}
-    %table{:style => "600px"}
-      %tr
-        %td{:colspan => "2"}
-          %strong Sup yo! You are fortunate enough to have your reminder
-          = (@reminder.subject)
-          snoozed until:
-          = @reminder.send_at
+  %body{:style => "font-size:12px;font-family:Helvetica,Arial,sans-serif;margin:20px 0 0;"}
+    %table{:style => "margin: 0 auto;width:600px;"}
+      %tbody
+        %tr
+          %td{:style=>"background: url(http://www.hound.cc/assets/bg-brown.png) #331A03; padding: 20px;"}
+            = link_to "http://hound.cc/", :target => "_blank", :style => "outline:none;" => do
+              = image_tag"logo.png"
+          %td
+            %h1{:style => "margin:40px 0 0;"} Sup yo! You are fortunate enough to have your reminder
+            = (@reminder.subject)
+            snoozed until:
+            = @reminder.send_at
