--- a/app/views/user_mailer/send_confirmation.html.haml
+++ b/app/views/user_mailer/send_confirmation.html.haml
@@ -8,7 +8,7 @@
       %tbody
         %tr
           %td{:style=>"background: url(http://www.hound.cc/assets/bg-brown.png) #331A03; padding: 20px;"}
-            = link_to "http://hound.cc/", :target => "_blank", :style => "outline:none;" => do
+            = link_to "http://hound.cc/", :target => "_blank", :style => "outline:none;" do
               = image_tag"logo.png"
         - unless @user_active
           = render 'invite'
