--- a/app/views/user_mailer/snooze.html.haml
+++ b/app/views/user_mailer/snooze.html.haml
@@ -12,10 +12,6 @@
           %td
             %h1{:style => "margin:40px 0 0;"}= "Snoozed: #{@original_subject}"
 
-            %p== This reminder is now snoozed until #{@send_at}
+            %p== This reminder was snoozed by #{@owner} until #{@send_at}
 
-            %p== #{@owner} created this reminder for you on #{@created_at}
-
-            %p== It has been snoozed #{@snoozed} times.
-
-            = render 'body', body: @body
+        = render 'body', body: @body
