almost done page styles

--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -76,6 +76,24 @@
     input[type=checkbox]
       float: right
       
+.inline_reminder form
+  background: #fff
+  margin: 0 0 15px
+  padding: 30px 15px 20px
+  position: relative
+  +border-radius(3px)
+  +box-shadow(rgba(0, 0, 0, 0.1) 0 0 5px)
+  label
+    color: rgba(0, 0, 0, 0.5)
+    display: block
+    font: 14px Amaranth
+  .mceEditor
+    position: absolute
+    right: 30px
+    top: 30px
+    table
+      width: 60%
+      
 .reminder_list
   h3
     color: $one
