--- a/app/views/devise/invitations/edit.html.haml
+++ b/app/views/devise/invitations/edit.html.haml
@@ -1,15 +1,15 @@
-%h1 Almost done! Just a few details...
+%h2 Almost done! Just a few details...
 
 = form_for resource, :as => resource_name, :url => activate_url, :html => { :method => :put } do |f|
   = devise_error_messages!
   = f.hidden_field :invitation_token
 
-  %p Enter a password for your new account
+  //%p Enter a password for your new account
   = f.label :password
   = f.password_field :password
 
-  %p Double-check your timezone
+  //%p Double-check your timezone
   = f.label :timezone
   = f.time_zone_select :timezone, nil, :default => "Pacific Time (US & Canada)"
 
-  = f.submit "Start using Hound →"
+  = f.submit "Start using Hound →", :class => "button medium alt"
