--- a/app/views/shared/_supported_date_formats.html.haml
+++ b/app/views/shared/_supported_date_formats.html.haml
@@ -29,7 +29,12 @@
 
 %h4 Actual Date
 %ul
-  %li ..
+  %li
+    = mail_to '04july@hound.cc'
+    (4th July)
+  %li
+    = mail_to 'aug-10@hound.cc'
+    (August 10)
 
 %h4 Abbreviations
 %ul
