--- a/app/views/settings/edit.html.haml
+++ b/app/views/settings/edit.html.haml
@@ -40,12 +40,19 @@
         = form_tag merge_users_url, method: :puts do
           = render 'merge_users'
 
+      .box
+        %h3 Close Account
+        %p We're sorry to see you go!
+
+        %p
+          Before you proceed, please keep in mind that once you close your account,
+          %b all of your account information, reminders and emails will be permanently deleted.
+
+        = link_to "Permanently Close This Account", registration_path(resource_name), :confirm => "Are you sure you want to close your account?", :method => :delete
+
     .sidebar.styled.pushed
-      %h3 Close Account
-      %p We're sorry to see you go!
 
+      %h3 Pro-Tip
       %p
-        Before you proceed, please keep in mind that once you close your account,
-        %b all of your account information, reminders and emails will be permanently deleted.
-
-      = link_to "Permanently Close This Account", registration_path(resource_name), :confirm => "Are you sure you want to close your account?", :method => :delete
+        When you snooze a reminder, Hound will automatically notify all the other
+        recipients for you!
