--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,18 +2,25 @@
   <h2>Sign up</h2>
 
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
 
-    <div><%= f.label :email %><br />
-    <%= f.email_field :email %></div>
+    <div>
+      <%= f.label :email %>
+      <%= f.email_field :email %>
+    </div>
 
-    <div><%= f.label :password %><br />
-    <%= f.password_field :password %></div>
+    <div>
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+    </div>
 
-    <div><%= f.label :timezone %><br />
-      <%= f.time_zone_select :timezone, nil, :default => "Pacific Time (US & Canada)" %></div>
+    <div>
+      <%= f.label :timezone %>
+      <%= f.time_zone_select :timezone, nil, :default => "Pacific Time (US & Canada)" %>
+    </div>
 
-    <div><%= f.submit "Sign up", :class =>"button medium alt" %></div>
+    <div>
+      <%= f.submit "Sign up", :class =>"button medium alt" %>
+    </div>
   <% end %>
 </div>
 
