devise error styles

--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -37,6 +37,10 @@
 
   select#user_timezone
     width: 266px
+    
+  .error
+    color: $red
+    font: 14px Amaranth
 
 #links
   padding-bottom: 30px
