--- a/app/assets/stylesheets/partials/_base.sass
+++ b/app/assets/stylesheets/partials/_base.sass
@@ -1,6 +1,7 @@
 $one:   #e88300
 $two:   #febd69
 $three: #331a03
+$red:   #e84700
 
 $line-height: 1.4  // 1.4 for true normalization
 $font-color: #222
