empty reminder list styled

--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -118,3 +118,19 @@
 #settings
   label
     display: block
+
+.schedule
+  background: #fff
+  color: #888
+  font-size: 12px
+  padding: 20px 15px
+  +box-shadow(rgba(0, 0, 0, 0.1) 0 0 5px)
+  li, span
+    color: #888
+  h3
+    margin-bottom: 15px
+  a
+    font: 14px Amaranth
+  hr
+    border: none
+    border-top: 2px dotted #e6e6e6
