add screenshots with fancybox popup improve copy text, tweak styles, add beta tag

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
 - *= require ./flashes
 - *= require ./notifications
 - *= require ./reminders
+- *= require ../javascripts/fancybox/jquery.fancybox-1.3.4.css
 - *= require_tree ./application
 - */
 
