--- a/app/views/static_page/how-to.html.haml
+++ b/app/views/static_page/how-to.html.haml
@@ -28,5 +28,20 @@
     .sidebar.styled
       = image_tag('icon-help.png')
       %p
-        Learn more about our 
-        = link_to 'Terms of Use', 'terms-of-use'
+        Your privacy is important to us.
+
+      %p
+        We delete your email contents and recipients once the
+        reminder is sent.
+
+      %p
+        We store your data on our secure servers for only as long as we need
+        to!
+
+      %p
+        We don't share or sell your data. We're
+        = link_to 'cool like that', "http://www.youtube.com/watch?v=3nLknje5E9E", target: "_blank"
+
+      %p
+        Learn more about our
+        = link_to 'Privacy Policy', 'privacy-policy'
