--- a/app/views/static_page/privacy-policy.html.haml
+++ b/app/views/static_page/privacy-policy.html.haml
@@ -15,7 +15,7 @@
           We automatically delete your email contents after the reminder has been
           sent, as well as your recipient's email address. To provide for the
           ability to reschedule a reminder that has been sent, deletion may occur
-          several days or weeks following the completion of the followup.
+          several days or weeks following the completion of the reminder.
         %li
           We collect limited account information to maintain your account and reminders
           on our servers.
@@ -70,6 +70,6 @@
     .sidebar.styled
       = image_tag('icon-help.png')
       %p
-        If you have any questions about this Privacy Policy, please 
+        If you have any questions about this Privacy Policy, please
         = mail_to 'support@hound.cc', 'contact us.'
 
