--- a/app/assets/stylesheets/partials/_content.sass
+++ b/app/assets/stylesheets/partials/_content.sass
@@ -24,20 +24,20 @@
   &.wide
     margin: 0
     padding: 40px 30%
-  
+
   span
     color: $one
     display: block
     font-size: 11px
     line-height: 1.4
-    opacity: 0.3
+    opacity: 0.7
     padding: 15px 0 0
     +text-shadow(rgba(0, 0, 0, 0.3) 0 1px 0)
     +transition(all 1s ease)
   &:hover, &:focus
     span
       opacity: 1
-  
+
 #guide
   background: url(image_path('bg-dark.png'))
   padding: 40px 0
@@ -79,7 +79,7 @@
       background: url(image_path('bg-white.png'))
     &:first-child
       padding-top: 60px
-  
+
   span.number
     background: $one
     color: #fff
@@ -108,7 +108,7 @@
   img
     float: right
     width: 45%
-    
+
 #signup
   background: url(image_path('bg-brown.png')) repeat center
   +box-shadow(rgba(0, 0, 0, 0.1) 0 -3px 9px inset)
@@ -124,7 +124,10 @@
     +text-shadow(rgba(0, 0, 0, 0.4) 0 1px 2px)
   h2, p
     color: $two
-    
+  a
+    text-decoration: underline
+    color: $one
+
 .benefits
   line-height: 1.3
   padding: 20px 0
@@ -134,7 +137,7 @@
     float: left
     padding: 0 1.3%
     width: 14%
-    
+
   h3
     color: $one
     font-size: 18px
@@ -146,7 +149,7 @@
   a
     color: $two
     font-size: 14px
-    
+
 .app
   padding: 50px 0
   h2
