--- a/app/assets/stylesheets/partials/_header.sass
+++ b/app/assets/stylesheets/partials/_header.sass
@@ -7,7 +7,7 @@
     position: absolute
     top: 0
     width: 14%
-    
+
 #featured
   background: url(image_path("bg-brown.png"))
   .wrapper
@@ -51,3 +51,8 @@
     +transition(all 0.5s ease)
     &:hover, &:focus
       opacity: 1
+  span
+    color: $two
+    float: right
+    font-family: 'Amaranth'
+    font-size: 80%
