--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,13 +2,13 @@
   %h2 Sign up
   = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
     %div
-      = f.label :email
+      = f.label :email, 'Enter your Email'
       = f.email_field :email
     %div
-      = f.label :password
+      = f.label :password, "Choose a Password"
       = f.password_field :password
     %div
-      = f.label :timezone
+      = f.label :timezone, 'Your Timezone'
       = f.time_zone_select :timezone, nil, :default => "Pacific Time (US & Canada)"
     %div
       = f.submit "Sign up", :class =>"button medium alt"
