--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,11 +9,11 @@
       %header#header
         - if landing_page?
           = render 'layouts/flashes'
-          
+
         .wrapper
           %h1#logo
             = link_to 'Hound.cc', '/'
-
+            %span beta
           %nav#main-nav
             - unless user_signed_in?
               %li= link_to 'How To', '/how-to', :class => cp("how-to")
@@ -24,6 +24,7 @@
             - else
               %li= link_to 'Upcoming', reminders_path
               %li= link_to 'Settings', settings_path
+              %li= link_to 'Help', 'https://hound.uservoice.com/', :class => 'js_uservoice_link'
               %li= link_to 'Logout', destroy_user_session_path, :method => :delete
 
       - unless landing_page?
@@ -38,7 +39,6 @@
           %li= link_to 'Terms of Use', 'terms-of-use'
           %li= link_to 'Privacy Policy', 'privacy-policy'
           %li= link_to 'How To', '/how-to'
-          %li= link_to 'FAQ', '/faq'
           %li= link_to 'About', 'about'
           %li= link_to 'Contact Us', 'https://hound.uservoice.com/', :class => 'js_uservoice_link'
         %p.copyright &copy; 2012 Siyelo Software. All rights reserved.
