--- a/app/views/static_page/about.html.haml
+++ b/app/views/static_page/about.html.haml
@@ -4,8 +4,8 @@
       %h2 About
 
       %p
-        Hound.cc was started by
-        = link_to 'Siyelo', "http://www.siyelo.com"
+        Hound.cc was created by
+        = link_to 'Siyelo', "http://www.siyelo.com", target: '_blank'
         , a web development consultancy based in beautiful Cape Town, South Africa.
 
       %p We wanted a better way to manage our email, and our calendar reminders. Everybody uses email; for many it is second nature. On the other hand, creating calendar events can be cumbersome, which is a problem since our calendars are often only useful to the extent we get a reminder when something needs our attention.
@@ -14,13 +14,14 @@
 
       %p So we created Hound.cc which lets you create email reminders, quickly. As fast as you can send or forward an email to Hound, you've just set a reminder.
 
-      %p Its revolutionized the way we manage important tasks and follow-ups, while reducing inbox clutter.
+      %p It really has revolutionized the way we manage important tasks and follow-ups, all the while reducing inbox clutter.
 
-      %p We hope you enjoy using Hound.cc just as much too!
+      %p We hope you enjoy using Hound.cc just as much as we do!
 
 
     .sidebar.styled
       = image_tag"logo-siyelo.png"
       %p
-        You may like to find out more about 
-        = link_to 'Siyelo', 'http://siyelo.com/'
+        Find out more about the folks at
+        = link_to 'Siyelo', 'http://siyelo.com/', target: '_blank'
+
